# Tweeter

./: Cargo.toml  README.md  Rocket.toml  rambler.json
migrations/: 111118-032000-create_tweets_table.sql  111118-032000-create_users_table.sql  111118-032000-init.sql  111118-080000-add_user_columns.sql
src/: main.rs
src/app/: catchers.rs  mod.rs
src/app/models/: mod.rs  tweet.rs  user.rs
src/app/routes/: home.rs  mod.rs  user.rs
src/app/stores/: mod.rs  postgres.rs
