[package]
name = "tweeter"
version = "0.1.0"
authors = ["Coty Rothery <cotyrothery@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0-rc.1"
uuid = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.5"
argon2rs = "0.2.5"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = true
features = ["postgres_pool"]

[dependencies.postgres]
version = "0.15"
features = ["with-uuid"]